...
                      snackBarType: "error",
                    );
                  },
                  passwordDontMatch: (_) {
                    CustomSnackBar().showCustomSnackBar(
                      showContext: context,
                      headlineText: 'Password do not match',
                      message: "Passwords must match",
                      snackBarType: 'warning',
                      showDuration: 2,
                    );
                  },

...
                    .read<RegisterFormBloc>()
                    .state
                    .email
                    .value
                    .fold(
                        (f) => f.maybeMap(
                            invalidEmail: (_) => 'Invalid Email',
                            orElse: () => null),
                        (_) => null),
              ),
              const SizedBox(height: 15),

              // Username input
              TextFormField(
                key: const ValueKey("registerViewUsernameField"),
                keyboardType: TextInputType.text,
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.person),
                  labelText: AppLocalizations.of(context)!.userName,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
...
                    .read<RegisterFormBloc>()
                    .state
                    .userName
                    .value
                    .fold(
                        (f) => f.maybeMap(
                            invalidName: (_) => 'Invalid Username',
                            orElse: () => null),
                        (_) => null),
              ),

              const SizedBox(height: 15),

              // Team Name Input
              TextFormField(
                key: const ValueKey("registerViewTeamNameField"),
                keyboardType: TextInputType.text,
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.sports_soccer),
                  labelText: AppLocalizations.of(context)!.teamName,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
...
                    .read<RegisterFormBloc>()
                    .state
                    .teamName
                    .value
                    .fold(
                        (f) => f.maybeMap(
                            invalidName: (_) => 'Invalid Team Name',
                            orElse: () => null),
                        (_) => null),
              ),

              const SizedBox(height: 15),

              // Password Input
              TextFormField(
                key: const ValueKey("registerViewPasswordField"),
                keyboardType: TextInputType.text,
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.lock),
                  labelText: AppLocalizations.of(context)!.password,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
...
              ),

              const SizedBox(height: 15),

              // Confirm Password
              TextFormField(
                key: const ValueKey("registerViewConfirmPasswordField"),
                // keyboardType: TextInputType.text,
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.lock),
                  labelText: AppLocalizations.of(context)!.confirmPassword,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
...
              const SizedBox(
                height: 24,
              ),

              // Register Button
              InkWell(
                key: const Key("registerViewRegisterButton"),
                onTap: () {
                  state.isSubmitting
                      ? null
                      : BlocProvider.of<RegisterFormBloc>(context).add(
                          const RegisterFormEvent.registerUserPressed(),
                        );
...
