...
                      Typicons.user_add,
                      size: 25,
                    ),
                  ),

                  IconButton(
                      key: const Key("publicPageSignInButton"),
                      onPressed: () {
                        Navigator.popAndPushNamed(context, "/sign-in");
                      },
                      icon: const Icon(
                        MdiIcons.login,
                        size: 25,
...
