...
              : AutovalidateMode.disabled,
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              // Email Input
              TextFormField(
                key: const ValueKey("loginViewUserName"),
                keyboardType: TextInputType.text,
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.email),
                  labelText: AppLocalizations.of(context)!.email,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
...
                    .read<SignInFormBloc>()
                    .state
                    .email
                    .value
                    .fold(
                        (f) => f.maybeMap(
                            invalidEmail: (_) => 'Invalid Email',
                            orElse: () => null),
                        (_) => null),
              ),

              const SizedBox(height: 15),

              // Password Input

              TextFormField(
                key: const ValueKey("loginViewPassword"),
                decoration: InputDecoration(
                  // prefixIcon: Icon(Icons.lock),
                  labelText: AppLocalizations.of(context)!.password,
                  labelStyle: Theme.of(context).textTheme.bodyText1!.copyWith(
                        fontSize: 16,
                        color: ConstantColors.primary_900.withOpacity(0.55),
...
              const SizedBox(
                height: 24,
              ),

              // Sign In Button
              InkWell(
                key: const Key("loginViewLoginButton"),
                onTap: () {
                  state.isSubmitting
                      ? null
                      : BlocProvider.of<SignInFormBloc>(context)
                          .add(const SignInFormEvent.signInUserPressed());
                },
...
                ),
              ),

              const SizedBox(height: 36),

              InkWell(
                key: const Key("loginViewSignUpRedirect"),
                onTap: () {
                  Navigator.pop(context);
                  Navigator.pushNamed(context, "/register");
                },
                child: Center(
                  child: RichText(
...
