...
                  const SizedBox(
                    height: 2,
                  ),

                  // Transfer
                  InkWell(
                    key: const Key("transferPlayerCardTransferButton"),
                    onTap: () {
                      if (isInitial) {
                        getIt<TransferBloc>().add(
                          TransferEvent.transferUserPlayerInitial(
                            transferInPlayerId: currentPlayer.playerId,
                          ),
...
