...
        builder: (context, state) {
          List allFormattedPlayers =
              getAllFormattedPlayers(userTeam: state.userTeam);

          final _transferBloc = getIt<TransferBloc>();
          return Scaffold(
            key: const Key("intialTransferViewMainKey"),
            body: SafeArea(
              child: SingleChildScrollView(
                key: const Key("initialTransferMainScrollKey"),
                child: Stack(
                  children: [
                    // Main Area
...
