...
  "watchListTranslations": "Watch List",
  "yourWatchList": "የምኞት ዝርዝር",
  "addToWatchList": "የምኞት ዝርዝር ውስጥ ያስገቡ",
  "removeFromWatchList": "ከምኞት ዝርዝር አስወግድ",
  "summary": "ማጠቃለያ",
  "efplStatsTranslation": "EFPL STATS Translation",
  "efplStats": "EFPL Stats",
  "highestPoints": "Highest Points",
  "averagePoints": "Average Points",
  "mostSelected": "Most Selected",
  "mostTransferredOut": "Most Transferred Out",
  "mostCaptained": "Most Captained",
  "mostViceCaptained": "Most Vice Captained",
  "benchBoostPlayed": "Bench Boost Played",
...
