...
    final mostReds = state.eplStats.mostReds.getOrCrash();
    final mostYellows = state.eplStats.mostYellows.getOrCrash();
    final mostSaves = state.eplStats.mostSaves.getOrCrash();
    final mostMinutesPlayed = state.eplStats.mostMinutesPlayed.getOrCrash();

    return SingleChildScrollView(
      key: const Key("eplStatsScrollView"),
      child: Container(
        padding: const EdgeInsets.fromLTRB(0, 24, 0, 0),
        color: Colors.blue[50],
        child: Column(
          children: [
            StatsTable(
...
