...
                        Icons.table_chart,
                        color: ConstantColors.primary_900,
                      ),
                      SizedBox(
                        width: 5,
                      ),
                      Center(child: Text('EPL Table'))
                    ],
                  ),
                  onTap: () {
                    Navigator.pushNamed(context, "/EPLeagueTable");
                  },
                ),
...
                    ),
                  ),
                ),
                // Stats
                Tab(
                  icon: Tooltip(
                    message: "EPL Stats",
                    child: Showcase(
                      key: _statsTabKey,
                      title: AppLocalizations.of(context)!.statsTabKeyTitle,
                      description:
                          AppLocalizations.of(context)!.statsTabKeyDesc,
                      shapeBorder: const CircleBorder(),
...
