...
          height: 50,
          width: MediaQuery.of(context).size.width,
          child: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
              InkWell(
                key: const Key("fixtureViewPrevGWKey"),
                onTap: () {
                  fixtureBloc.add(
                    const FixtureEvent.decreaseGameWeek(),
                  );
                },
                child: const Icon(Icons.arrow_back_ios),
...
                AppLocalizations.of(context)!.gameWeek +
                    " " +
                    state.gameWeekId.toString(),
                style: Theme.of(context).textTheme.bodyText1,
              ),
              InkWell(
                key: const Key("fixtureViewNextGWKey"),
                onTap: () {
                  fixtureBloc.add(
                    const FixtureEvent.increaseGameWeek(),
                  );
                },
                child: const Icon(Icons.arrow_forward_ios),
...
